# GinaCP

./: .gitignore  CMakeLists.txt  README.md  compile.cmd  compile.sh  configure.sh
include/glad/: glad.h
src/cpp/: gina.cpp  gina.dep  glad.c  shader.fs  shader.h  shader.vs
